# placer

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/ehr/: cli.py  config.py
backend/ehr/models/: __init__.py  clinical.py  enums.py
backend/ehr/routers/: __init__.py  communications.py  conditions.py  notes.py  orders.py  patients.py
backend/ehr/seed/: fhir_import.py
backend/iliad/: __init__.py  bland.py  cli.py  config.py  db.py  events.py  main.py  schemas.py
backend/iliad/models/: __init__.py  base.py  clinical.py  dispo.py  enums.py  events.py
backend/iliad/routers/: __init__.py  _common.py  admin.py  calls.py  care_tasks.py  communications.py  dispo.py  encounters.py  events.py  medications.py  notes.py  observations.py  orders.py  patients.py  placer.py  placer_ops.py
backend/iliad/seed/: __init__.py  facilities.py  hero_patients.py
backend/tests/: conftest.py  test_api.py  test_calls.py  test_events.py
engine/: INTERFACES.md  README.md  pyproject.toml  requirements.txt
engine/placer/: __init__.py  board.py  config.py  db.py  ehr_client.py  llm.py  main.py  models.py  state.py
engine/placer/api/: __init__.py  chat.py  ops.py
engine/placer/brain/: __init__.py  actions.py  chatlink.py  gps.py  loop.py  pipeline.py  respond.py  router_logic.py  schemas.py  watchman.py
engine/placer/calls/: __init__.py  schemas.py
engine/placer/registry/: __init__.py  pathways.yaml
engine/scripts/: solo_demo.py
engine/tests/: conftest.py  test_brain_actions.py  test_brain_helpers.py  test_brain_pipeline.py  test_brain_respond.py  test_brain_watchman.py  test_chat_api.py  test_chat_board.py  test_mirroring.py  test_models.py  test_ops_api.py  test_registry.py  test_state.py  test_workers.py
(+57 files in other folders)
