[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "iliad"
version = "0.1.0"
description = "Iliad: lightweight Epic-like demo EHR API"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
iliad = "iliad.cli:main"

[tool.setuptools]
packages = ["iliad"]

[tool.pytest.ini_options]
testpaths = ["tests"]
