[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "placer-engine"
version = "0.1.0"
description = "Agentic discharge-readiness engine for the Placer demo"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools]
packages = ["placer"]

[tool.setuptools.package-data]
placer = ["registry/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
